# project-a-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 3ece7b17609f_misc_migration.py  639d074643af_initialize_base_user_model.py  88c3b41f2f04_add_base_models_for_issues_org_projects_.py
app/: admin.py  config.py  database.py
app/auth/: jwt.py
app/graphql/: context.py  permissions.py  schema.py
app/graphql/user/: inputs.py  mutations.py  queries.py  types.py
app/models/: __init__.py  issue.py  organization.py  project.py  team.py  user.py
app/repositories/: user.py
app/services/: user.py
